Update title for php8_assertions RFC

--- a/rfcs/0676.rst
+++ b/rfcs/0676.rst
@@ -1,8 +1,8 @@
-Your Title Here
-===============
+Deprecate assert_options
+========================
 
 :PHP-RFC: 0676
-:Title: Your Title Here
+:Title: Deprecate assert_options
 :Author: Levi Morrison <levim@php.net>
 :Status: Withdrawn
 :Type: Unknown
