--- a/rfcs/0700.rst
+++ b/rfcs/0700.rst
@@ -116,8 +116,15 @@ work with user input, I think this syntax would really help in Propel."
 **RedBean** (Gabor de Mooij): "You can list RedBeanPHP as a supporter,
 we will implement this into the core."
 
-**Psalm** (Matthew Brown): "I've just added support for a
-*literal-string* type to Psalm: https://psalm.dev/r/9440908f39"
+**Psalm** (Matthew Brown): 13th June "I was skeptical about the first
+draft of this RFC when I saw it last month, but now I see the light
+(especially with the concat changes)". Then on the 14th June, "I've just
+added support for a *literal-string* type to Psalm:
+https://psalm.dev/r/9440908f39"
+(`4.8.0 <https://github.com/vimeo/psalm/releases/tag/4.8.0>`__)
+
+**PHPStan** (Ondřej Mirtes): 1st September, has been implemented in
+`0.12.97 <https://github.com/phpstan/phpstan/releases/tag/0.12.97>`__.
 
 Proposal
 --------
