--- a/rfcs/0834.rst
+++ b/rfcs/0834.rst
@@ -73,6 +73,8 @@ extension.
 -  rand()
 -  mt_srand()
 -  mt_rand()
+-  random_int()
+-  random_bytes()
 
 At the same time, the following internal APIs will also be relocated. If
 you want to use them, you can simply include ext/random/random.h.
@@ -110,6 +112,26 @@ an alternative to array_rand because it is too complex.
 -  getBytes()
 -  shuffleArray()
 -  shuffleString()
+
+This class can be used in the following way.
+
+.. code:: php
+
+   // functions
+   mt_srand(1234);
+   mt_rand(); // generate random number
+   mt_rand(1, 10); // generate random number in range
+   str_shuffle("foobar"); // shuffle string
+   $arr = range(1, 10);
+   shuffle($arr); // shuffle array items (pass by reference)
+
+   // object
+   $mt = new Random\NumberGenerator\MT19937(1234);
+   $mt->generate(); // generate random number 
+   $random = new Random($mt);
+   $random->getInt(1, 10); // generate random number in range
+   $random->shuffleString("foobar"); // shuffle string
+   $random->shuffleArray(range(1, 10)); // shuffle array items (pass by value)
 
 The Random class accepts an instance that inherits from
 Random\NumberGenerator as a constructor argument.
@@ -231,8 +253,8 @@ random number implementation.
 If this proposal is approved, I will then propose the following changes
 
 -  Replace the state of the existing implementation with php_random_ng.
--  Replace random_bytes() with random_bytes() for random numbers used in
-   shuffle(), str_shuffle(), and array_rand().
+-  Changes random source to php_random_int() a shuffle(), str_shuffle(),
+   and array_rand() .
 -  Deprecate srand() and mt_srand() (step by step)
 
 Backward Incompatible Changes
