--- a/rfcs/0835.rst
+++ b/rfcs/0835.rst
@@ -43,6 +43,9 @@ The ``is_callable()`` function and ``callable`` type remain side-effect
 free and do not throw a deprecation warning. They will continue to
 accept these callables until support is removed entirely.
 
+Normal ``"function"``, ``"Foo::method"``, ``["Foo", "method"]`` and
+``[new Foo, "method"]`` style callables are unaffected by this change.
+
 Discussion
 ----------
 
