Strip superfluous title prefixes

--- a/rfcs/0000.rst
+++ b/rfcs/0000.rst
@@ -662,7 +662,7 @@ Open PHP-RFCs (under consideration)
      - 
    * - U
      - `0400 <0400.rst>`_
-     - :raw-text:`RFC: Merge Symbol Tables`
+     - :raw-text:`Merge Symbol Tables`
      - Draft
      - Levi Morrison
      - 
@@ -854,13 +854,13 @@ Open PHP-RFCs (under consideration)
      - 
    * - U
      - `0593 <0593.rst>`_
-     - :raw-text:`RFC: Merge Symbol Tables`
+     - :raw-text:`Merge Symbol Tables`
      - Draft
      - Levi Morrison
      - 
    * - U
      - `0597 <0597.rst>`_
-     - :raw-text:`PHP RFC - Consistent Class-constant Override`
+     - :raw-text:`Consistent Class-constant Override`
      - Draft
      - Pedro Magalhães, WesNetmo
      - 
@@ -1602,7 +1602,7 @@ Implemented PHP-RFCs
      - 5.4
    * - S
      - `0118 <0118.rst>`_
-     - :raw-text:`RFC: Foreach_variable Supporting T_LIST`
+     - :raw-text:`Foreach_variable Supporting T_LIST`
      - Implemented
      - Xinchen Hui
      - 5.5
@@ -1614,7 +1614,7 @@ Implemented PHP-RFCs
      - 5.4
    * - S
      - `0134 <0134.rst>`_
-     - :raw-text:`RFC: Const Array/string Dereference`
+     - :raw-text:`Const Array/string Dereference`
      - Implemented
      - Xinchen Hui
      - 5.5
@@ -1626,13 +1626,13 @@ Implemented PHP-RFCs
      - 5.5
    * - S
      - `0142 <0142.rst>`_
-     - :raw-text:`RFC: Remove Preg_replace /e Modifier`
+     - :raw-text:`Remove Preg_replace /e Modifier`
      - Implemented
      - Nikita Popov
      - 5.5
    * - S
      - `0157 <0157.rst>`_
-     - :raw-text:`RFC: Allow Arbitrary Expression Arguments To Empty() And Isset()`
+     - :raw-text:`Allow Arbitrary Expression Arguments To Empty() And Isset()`
      - Implemented
      - Nikita Popov
      - 5.5
@@ -2544,7 +2544,7 @@ Implemented PHP-RFCs
      - 7.4
    * - S
      - `0610 <0610.rst>`_
-     - :raw-text:`RFC: Always Available Hash Extension`
+     - :raw-text:`Always Available Hash Extension`
      - Implemented
      - Kalle Sommer Nielsen
      - 7.4
@@ -3170,7 +3170,7 @@ Unknown State (PHP-RFCs for which we can't determine the status)
      - 
    * - U
      - `0146 <0146.rst>`_
-     - :raw-text:`RFC: Prototype Argument Type Casting`
+     - :raw-text:`Prototype Argument Type Casting`
      - Unknown
      - Davey Shafik
      - 
@@ -3538,7 +3538,7 @@ Abandoned, Withdrawn, and Declined PHP-RFCs
      - 
    * - U
      - `0110 <0110.rst>`_
-     - :raw-text:`RFC: First-Class Object And Array Literals`
+     - :raw-text:`First-Class Object And Array Literals`
      - Withdrawn
      - Sean Coates
      - 
@@ -3568,7 +3568,7 @@ Abandoned, Withdrawn, and Declined PHP-RFCs
      - 
    * - U
      - `0123 <0123.rst>`_
-     - :raw-text:`RFC: Strn(case)cmp Supporting A Negative Length As Its Third Paramter`
+     - :raw-text:`Strn(case)cmp Supporting A Negative Length As Its Third Paramter`
      - Withdrawn
      - Xinchen Hui
      - 
@@ -4660,7 +4660,7 @@ Abandoned, Withdrawn, and Declined PHP-RFCs
      - 
    * - U
      - `0543 <0543.rst>`_
-     - :raw-text:`PHP RFC - Deprecation Of Fallback To Root Scope`
+     - :raw-text:`Deprecation Of Fallback To Root Scope`
      - Withdrawn
      - WesNetmo, Levi Morrison, Ocramius
      - 
@@ -4786,7 +4786,7 @@ Abandoned, Withdrawn, and Declined PHP-RFCs
      - 
    * - U
      - `0594 <0594.rst>`_
-     - :raw-text:`PHP RFC - Deprecate Backtick Operator`
+     - :raw-text:`Deprecate Backtick Operator`
      - Withdrawn
      - WesNetmo
      - 
@@ -5832,7 +5832,7 @@ Numerical Index
      - 5.4
    * - U
      - `0110 <0110.rst>`_
-     - :raw-text:`RFC: First-Class Object And Array Literals`
+     - :raw-text:`First-Class Object And Array Literals`
      - Withdrawn
      - Sean Coates
      - 
@@ -5880,7 +5880,7 @@ Numerical Index
      - 
    * - S
      - `0118 <0118.rst>`_
-     - :raw-text:`RFC: Foreach_variable Supporting T_LIST`
+     - :raw-text:`Foreach_variable Supporting T_LIST`
      - Implemented
      - Xinchen Hui
      - 5.5
@@ -5910,7 +5910,7 @@ Numerical Index
      - 5.4
    * - U
      - `0123 <0123.rst>`_
-     - :raw-text:`RFC: Strn(case)cmp Supporting A Negative Length As Its Third Paramter`
+     - :raw-text:`Strn(case)cmp Supporting A Negative Length As Its Third Paramter`
      - Withdrawn
      - Xinchen Hui
      - 
@@ -5976,7 +5976,7 @@ Numerical Index
      - 
    * - S
      - `0134 <0134.rst>`_
-     - :raw-text:`RFC: Const Array/string Dereference`
+     - :raw-text:`Const Array/string Dereference`
      - Implemented
      - Xinchen Hui
      - 5.5
@@ -6024,7 +6024,7 @@ Numerical Index
      - 
    * - S
      - `0142 <0142.rst>`_
-     - :raw-text:`RFC: Remove Preg_replace /e Modifier`
+     - :raw-text:`Remove Preg_replace /e Modifier`
      - Implemented
      - Nikita Popov
      - 5.5
@@ -6048,7 +6048,7 @@ Numerical Index
      - 
    * - U
      - `0146 <0146.rst>`_
-     - :raw-text:`RFC: Prototype Argument Type Casting`
+     - :raw-text:`Prototype Argument Type Casting`
      - Unknown
      - Davey Shafik
      - 
@@ -6114,7 +6114,7 @@ Numerical Index
      - 6.0
    * - S
      - `0157 <0157.rst>`_
-     - :raw-text:`RFC: Allow Arbitrary Expression Arguments To Empty() And Isset()`
+     - :raw-text:`Allow Arbitrary Expression Arguments To Empty() And Isset()`
      - Implemented
      - Nikita Popov
      - 5.5
@@ -7572,7 +7572,7 @@ Numerical Index
      - 
    * - U
      - `0400 <0400.rst>`_
-     - :raw-text:`RFC: Merge Symbol Tables`
+     - :raw-text:`Merge Symbol Tables`
      - Draft
      - Levi Morrison
      - 
@@ -8430,7 +8430,7 @@ Numerical Index
      - 7.2
    * - U
      - `0543 <0543.rst>`_
-     - :raw-text:`PHP RFC - Deprecation Of Fallback To Root Scope`
+     - :raw-text:`Deprecation Of Fallback To Root Scope`
      - Withdrawn
      - WesNetmo, Levi Morrison, Ocramius
      - 
@@ -8730,13 +8730,13 @@ Numerical Index
      - 
    * - U
      - `0593 <0593.rst>`_
-     - :raw-text:`RFC: Merge Symbol Tables`
+     - :raw-text:`Merge Symbol Tables`
      - Draft
      - Levi Morrison
      - 
    * - U
      - `0594 <0594.rst>`_
-     - :raw-text:`PHP RFC - Deprecate Backtick Operator`
+     - :raw-text:`Deprecate Backtick Operator`
      - Withdrawn
      - WesNetmo
      - 
@@ -8754,7 +8754,7 @@ Numerical Index
      - 
    * - U
      - `0597 <0597.rst>`_
-     - :raw-text:`PHP RFC - Consistent Class-constant Override`
+     - :raw-text:`Consistent Class-constant Override`
      - Draft
      - Pedro Magalhães, WesNetmo
      - 
@@ -8832,7 +8832,7 @@ Numerical Index
      - 
    * - S
      - `0610 <0610.rst>`_
-     - :raw-text:`RFC: Always Available Hash Extension`
+     - :raw-text:`Always Available Hash Extension`
      - Implemented
      - Kalle Sommer Nielsen
      - 7.4
