Apply latest changes to generated RFC documents

--- a/rfcs/0110.rst
+++ b/rfcs/0110.rst
@@ -1,8 +1,8 @@
-RFC: First-Class Object And Array Literals
-------------------------------------------
+First-Class Object And Array Literals
+-------------------------------------
 
 :PHP-RFC: 0110
-:Title: RFC: First-Class Object And Array Literals
+:Title: First-Class Object And Array Literals
 :Author: Sean Coates <sean@php.net>
 :Status: Withdrawn
 :Type: Unknown
