--- a/rfcs/0118.rst
+++ b/rfcs/0118.rst
@@ -1,8 +1,8 @@
-RFC: Foreach_variable Supporting T_LIST
-=======================================
+Foreach_variable Supporting T_LIST
+==================================
 
 :PHP-RFC: 0118
-:Title: RFC: Foreach_variable Supporting T_LIST
+:Title: Foreach_variable Supporting T_LIST
 :Author: Xinchen Hui <laruence@php.net>
 :Status: Implemented
 :Type: Standards Track
