--- a/rfcs/0123.rst
+++ b/rfcs/0123.rst
@@ -1,8 +1,8 @@
-RFC: Strn(case)cmp Supporting A Negative Length As Its Third Paramter
-=====================================================================
+Strn(case)cmp Supporting A Negative Length As Its Third Paramter
+================================================================
 
 :PHP-RFC: 0123
-:Title: RFC: Strn(case)cmp Supporting A Negative Length As Its Third Paramter
+:Title: Strn(case)cmp Supporting A Negative Length As Its Third Paramter
 :Author: Xinchen Hui <laruence@php.net>
 :Status: Withdrawn
 :Type: Unknown
