--- a/rfcs/0134.rst
+++ b/rfcs/0134.rst
@@ -1,8 +1,8 @@
-RFC: Const Array/string Dereference
-===================================
+Const Array/string Dereference
+==============================
 
 :PHP-RFC: 0134
-:Title: RFC: Const Array/string Dereference
+:Title: Const Array/string Dereference
 :Author: Xinchen Hui <laruence@php.net>
 :Status: Implemented
 :Type: Standards Track
