--- a/rfcs/0142.rst
+++ b/rfcs/0142.rst
@@ -1,8 +1,8 @@
-RFC: Remove Preg_replace /e Modifier
-====================================
+Remove Preg_replace /e Modifier
+===============================
 
 :PHP-RFC: 0142
-:Title: RFC: Remove Preg_replace /e Modifier
+:Title: Remove Preg_replace /e Modifier
 :Author: Nikita Popov <nikic@php.net>
 :Status: Implemented
 :Type: Standards Track
