--- a/rfcs/0157.rst
+++ b/rfcs/0157.rst
@@ -1,8 +1,8 @@
-RFC: Allow Arbitrary Expression Arguments To Empty() And Isset()
-================================================================
+Allow Arbitrary Expression Arguments To Empty() And Isset()
+===========================================================
 
 :PHP-RFC: 0157
-:Title: RFC: Allow Arbitrary Expression Arguments To Empty() And Isset()
+:Title: Allow Arbitrary Expression Arguments To Empty() And Isset()
 :Author: Nikita Popov <nikic@php.net>
 :Status: Implemented
 :Type: Standards Track
