--- a/rfcs/0400.rst
+++ b/rfcs/0400.rst
@@ -1,8 +1,8 @@
-RFC: Merge Symbol Tables
-========================
+Merge Symbol Tables
+===================
 
 :PHP-RFC: 0400
-:Title: RFC: Merge Symbol Tables
+:Title: Merge Symbol Tables
 :Author: Levi Morrison <levim@php.net>
 :Status: Draft
 :Type: Unknown
