--- a/rfcs/0594.rst
+++ b/rfcs/0594.rst
@@ -1,8 +1,8 @@
-PHP RFC - Deprecate Backtick Operator
-=====================================
+Deprecate Backtick Operator
+===========================
 
 :PHP-RFC: 0594
-:Title: PHP RFC - Deprecate Backtick Operator
+:Title: Deprecate Backtick Operator
 :Author: WesNetmo
 :Status: Withdrawn
 :Type: Unknown
