--- a/rfcs/0610.rst
+++ b/rfcs/0610.rst
@@ -1,8 +1,8 @@
-RFC: Always Available Hash Extension
-====================================
+Always Available Hash Extension
+===============================
 
 :PHP-RFC: 0610
-:Title: RFC: Always Available Hash Extension
+:Title: Always Available Hash Extension
 :Author: Kalle Sommer Nielsen <kalle@php.net>
 :Status: Implemented
 :Type: Standards Track
