--- a/rfcs/0711.rst
+++ b/rfcs/0711.rst
@@ -5,7 +5,7 @@ Poll: Switch Expression
 :Title: Poll: Switch Expression
 :Author: Ilija <tovilo.ilija@gmail.com>
 :Status: Unknown
-:Type: Unknown
+:Type: Informational
 :Created: 2020-03-31
 :Version: 1.0
 
