--- a/rfcs/0776.rst
+++ b/rfcs/0776.rst
@@ -5,7 +5,7 @@ Straw Poll: Naming For *any() And *all() On Iterables
 :Title: Straw Poll: Naming For *any() And *all() On Iterables
 :Author: Tyson Andre <tandre@php.net>
 :Status: Unknown
-:Type: Unknown
+:Type: Informational
 :Created: 2020-12-19
 :Version: 0.2
 
