--- a/rfcs/0782.rst
+++ b/rfcs/0782.rst
@@ -5,7 +5,7 @@ Straw Poll: Interest In Configurable Callback To Dump Results Of Expressions In 
 :Title: Straw Poll: Interest In Configurable Callback To Dump Results Of Expressions In Php -a
 :Author: Tyson Andre <tandre@php.net>
 :Status: Withdrawn
-:Type: Unknown
+:Type: Informational
 :Created: 2021-01-05
 :Version: 0.2
 
