--- a/rfcs/0146.rst
+++ b/rfcs/0146.rst
@@ -1,8 +1,8 @@
-RFC: Prototype Argument Type Casting
-====================================
+Prototype Argument Type Casting
+===============================
 
 :PHP-RFC: 0146
-:Title: RFC: Prototype Argument Type Casting
+:Title: Prototype Argument Type Casting
 :Author: Davey Shafik <davey@php.net>
 :Status: Unknown
 :Type: Unknown
