--- a/rfcs/0543.rst
+++ b/rfcs/0543.rst
@@ -1,8 +1,8 @@
-PHP RFC - Deprecation Of Fallback To Root Scope
-===============================================
+Deprecation Of Fallback To Root Scope
+=====================================
 
 :PHP-RFC: 0543
-:Title: PHP RFC - Deprecation Of Fallback To Root Scope
+:Title: Deprecation Of Fallback To Root Scope
 :Author: WesNetmo, Levi Morrison, Ocramius
 :Status: Withdrawn
 :Type: Unknown
