--- a/rfcs/0597.rst
+++ b/rfcs/0597.rst
@@ -1,8 +1,8 @@
-PHP RFC - Consistent Class-constant Override
-============================================
+Consistent Class-constant Override
+==================================
 
 :PHP-RFC: 0597
-:Title: PHP RFC - Consistent Class-constant Override
+:Title: Consistent Class-constant Override
 :Author: Pedro Magalhães, WesNetmo
 :Status: Draft
 :Type: Unknown
