--- a/rfcs/0664.rst
+++ b/rfcs/0664.rst
@@ -5,7 +5,7 @@ Poll: Feasibility Of P++
 :Title: Poll: Feasibility Of P++
 :Author: Derick <derick@php.net>
 :Status: Unknown
-:Type: Unknown
+:Type: Informational
 :Created: 2019-08-14
 :Version: 0.1
 
