--- a/rfcs/0688.rst
+++ b/rfcs/0688.rst
@@ -5,7 +5,7 @@ Poll: Places To Allow Function Calls In Constant Expressions
 :Title: Poll: Places To Allow Function Calls In Constant Expressions
 :Author: Tyson Andre <tandre@php.net>
 :Status: Withdrawn
-:Type: Unknown
+:Type: Informational
 :Created: 2020-02-16
 :Version: 0.2
 
