--- a/rfcs/0781.rst
+++ b/rfcs/0781.rst
@@ -5,7 +5,7 @@ Straw Poll: Using Namespaces For *any() And *all() On Iterables
 :Title: Straw Poll: Using Namespaces For *any() And *all() On Iterables
 :Author: Tyson Andre <tandre@php.net>
 :Status: Withdrawn
-:Type: Unknown
+:Type: Informational
 :Created: 2021-01-05
 :Version: 0.2
 
