--- a/rfcs/0818.rst
+++ b/rfcs/0818.rst
@@ -5,7 +5,7 @@ Straw Poll: Namespace To Use For CachedIterable And Iterable Functionality
 :Title: Straw Poll: Namespace To Use For CachedIterable And Iterable Functionality
 :Author: Tyson Andre <tandre@php.net>
 :Status: Withdrawn
-:Type: Unknown
+:Type: Informational
 :Created: 2021-06-01
 :Version: 0.2.1
 
